# Battleship

./: .gitignore  README.md  pyproject.toml
src/: game.py  main.py
